3HW/manifests/hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: st-ab1-kim
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
