3HW/manifests/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: st-ab1-kim
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
